gccida/g0/computing_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3772:20: error: expected identifier or '('
for (  struct occr = expr->avail_occr; occr;  struct occr = occr->next ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3772:40: error: expected ';' in 'for' statement specifier
for (  struct occr = expr->avail_occr; occr;  struct occr = occr->next ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3772:47: error: expected expression
for (  struct occr = expr->avail_occr; occr;  struct occr = occr->next ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3772:47: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3772:5: note: to match this '('
for (  struct occr = expr->avail_occr; occr;  struct occr = occr->next ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3776:20: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) < *( ( _DWORD *)uid_cuid_1 + occr->insn->fld[0].rtint) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/gcse.c:3776:69: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) < *( ( _DWORD *)uid_cuid_1 + occr->insn->fld[0].rtint) 
                                                                    ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/computing_insn/src/obj/gcse.o] Error 1
